<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <groupId>com.sencha.gxt</groupId>
  <artifactId>gxt-demo-desktop</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>Sencha Desktop Demo</name>

  <properties>
    <!-- GXT -->
    <gxt.version>4.0.2</gxt.version>

    <!-- GWT -->
    <gwt.version>2.8.2</gwt.version>
    <gwt.plugin.version>2.8.2</gwt.plugin.version>
    <gwt.style>OBF</gwt.style>

    <!-- Maven -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>

    <downloadSources>true</downloadSources>
    <downloadJavadocs>true</downloadJavadocs>
  </properties>

  <build>
    <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>

      <!-- Skips the GWTTestCases during Junit Testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <excludes>
            <exclude>**/*GwtTest.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- GWT -->
      <!-- 'mvn gwt:run' - runs development mode -->
      <!-- 'mvn gwt:debug' - runs debug mode -->
      <!-- 'mvn gwt:compile' - compiles gwt -->
      <!-- 'mvn gwt:test' or 'mvn integration-test' - runs the gwt tests (*GwtTest.java), (run a suite its faster) -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.plugin.version}</version>
        <configuration>
          <strict>true</strict>

          <testTimeOut>180</testTimeOut>
          <includes>**/*GwtTestSuite.java</includes>
          <excludes>**/*GwtTest.java</excludes>
          <mode>htmlunit</mode>

          <extraJvmArgs>-Xss1024K -Xmx1G -XX:MaxPermSize=256M</extraJvmArgs>
          <logLevel>INFO</logLevel>
          <style>${gwt.style}</style>

          <copyWebapp>true</copyWebapp>
          <hostedWebapp>${webappDirectory}</hostedWebapp>

          <runTarget>MyGxtProject40.html</runTarget>
          <modules>
            <module>com.sencha.gxt.examples.resources.Resources</module>
            <module>com.sencha.gxt.desktop.Desktop</module>
            <module>com.sencha.gxt.desktopapp.DesktopApp</module>
          </modules>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>test</goal>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>

        <dependencies>
          <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
            <scope>compile</scope>
          </dependency>

          <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwt.version}</version>
            <scope>compile</scope>
          </dependency>
          <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-codeserver</artifactId>
            <version>${gwt.version}</version>
            <scope>compile</scope>
          </dependency>

        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>openjpa-maven-plugin</artifactId>
        <version>1.2</version>
        <configuration>
          <includes>**/server/data/*.class</includes>
          <addDefaultConstructor>true</addDefaultConstructor>
          <!-- <toolProperties>
            <property>
              <name>directory</name>
              <value>${project.build.directory}/classes</value>
            </property>
          </toolProperties> -->
        </configuration>
        <executions>
          <execution>
            <id>enhancer</id>
            <phase>process-classes</phase>
            <goals>
              <goal>enhance</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.apache.openjpa</groupId>
            <artifactId>openjpa</artifactId>
            <version>2.1.0</version>
            <exclusions>
              <exclusion>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
              </exclusion>
              <exclusion>
                <groupId>org.apache.geronimo.specs</groupId>
                <artifactId>geronimo-jms_1.1_spec</artifactId>
              </exclusion>
            </exclusions>
          </dependency>
          <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.9.1</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build 
          itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>
                      openjpa-maven-plugin
                    </artifactId>
                    <versionRange>[1.2,)</versionRange>
                    <goals>
                      <goal>enhance</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <execute>
                      <runOnIncremental>true</runOnIncremental>
                    </execute>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <versionRange>[1.0.0,)</versionRange>
                    <goals>
                      <goal>enforce</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.mortbay.jetty</groupId>
          <artifactId>jetty-maven-plugin</artifactId>
          <version>8.1.9.v20130131</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>JBoss Repo</id>
      <url>https://repository.jboss.org/nexus/content/repositories/releases</url>
      <name>JBoss Repo</name>
    </repository>
    <repository>
      <id>apache-snapshots</id>
      <url>http://people.apache.org/repo/m2-incubating-repository</url>
    </repository>
    <repository>
      <id>repo2-maven2</id>
      <url>http://repo2.maven.org/maven2</url>
    </repository>
    <repository>
      <id>sonatype.snapshots</id>
      <name>Sonatype snapshot repository</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <!-- http://docs.sencha.com/gxt/3.1/getting_started/maven/Maven.html -->
      <!-- ~/.m2/settings.xml add <server/> with the support portal credentials -->
      <id>sencha-gxt-repository</id>
      <name>Sencha GXT Repository</name>

      <!-- Commercial (with Support) -->
      <!-- <url>https://maven.sencha.com/repo/gxt-commercial-release</url> -->
      <url>https://maven.sencha.com/repo/gxt-support-commercial-release</url>
      <!-- <url>https://maven.sencha.com/repo/gxt-commercial-release-staging</url> -->


      <!-- GPL -->
      <!-- <url>https://maven.sencha.com/repo/gxt-gpl-release</url> -->
      <!-- <url>https://maven.sencha.com/repo/gxt-gpl-snapshot</url> -->

      <!-- GPL with Support -->
      <!-- <url>https://maven.sencha.com/repo/gxt-support-gpl-release</url> -->

      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <!-- Maven Exec, it uses the theme builder -->
  <pluginRepositories>
    <pluginRepository>
      <!-- http://docs.sencha.com/gxt/3.1/getting_started/maven/Maven.html -->
      <!-- ~/.m2/settings.xml add <server/> with the support portal credentials -->
      <id>sencha-gxt-repository</id>
      <name>Sencha GXT Repository</name>

      <!-- Commercial (with Support) -->
      <!-- <url>https://maven.sencha.com/repo/gxt-commercial-release</url> -->
      <url>https://maven.sencha.com/repo/gxt-support-commercial-release</url>
      <!-- <url>https://maven.sencha.com/repo/gxt-commercial-release-staging</url> -->


      <!-- GPL -->
      <!-- <url>https://maven.sencha.com/repo/gxt-gpl-release</url> -->
      <!-- <url>https://maven.sencha.com/repo/gxt-gpl-snapshot</url> -->

      <!-- GPL with Support -->
      <!-- <url>https://maven.sencha.com/repo/gxt-support-gpl-release</url> -->
    </pluginRepository>

    <!-- GWT plugin snapshot repo -->
    <!-- <pluginRepository> <id>google-snapshots</id> <url>https://oss.sonatype.org/content/repositories/google-snapshots/</url> 
      <releases> <enabled>false</enabled> </releases> <snapshots> <enabled>true</enabled> </snapshots> </pluginRepository> -->
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwt.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt.inject</groupId>
      <artifactId>gin</artifactId>
      <version>2.1.2</version>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt</artifactId>
      <version>${gxt.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-chart</artifactId>
      <version>${gxt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-theme-neptune</artifactId>
      <version>${gxt.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.4.0</version>
    </dependency>

    <!-- Support for our JPA persistence -->
    <dependency>
      <groupId>org.apache.openjpa</groupId>
      <artifactId>openjpa-all</artifactId>
      <version>2.4.2</version>
    </dependency>

    <!-- RF annotation processing -->
    <dependency>
      <groupId>com.google.web.bindery</groupId>
      <artifactId>requestfactory-apt</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <!-- RF needs a JSON jar at runtime -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20090211</version>
      <scope>compile</scope>
    </dependency>

    <!-- javax.validation for RF bean validation -->
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>1.0.0.GA</version>
      <scope>compile</scope>
    </dependency>
    <!-- Simple javax.validation impl -->
    <dependency>
      <groupId>org.apache.bval</groupId>
      <artifactId>bval-jsr303</artifactId>
      <version>0.2-incubating</version>
      <scope>runtime</scope>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.senchalabs.gwt</groupId>
      <artifactId>gxt-driver</artifactId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>
